# AlienTables

./: .gitignore  AlienTables.py  Audit.csv  README.md
.github/workflows/: publish.yml
alienTables/: LICENSE  pyproject.toml
alienTables/alienextractor/: cli.py  excel.py  extractor.py  ocr.py  parser.py  utils.py
alienextractor/: README.md  pyproject.toml
alienextractor/alienextractor/: __init__.py  engine.py
input/: 1.xlsx  10.xlsx  100.xlsx  101.xlsx  102.xlsx  103.xlsx  104.xlsx  105.xlsx  106.xlsx  107.xlsx  108.xlsx  109.xlsx  11.xlsx  110.xlsx  111.xlsx  112.xlsx  113.xlsx  114.xlsx  115.xlsx  116.xlsx  117.xlsx  118.xlsx  119.xlsx  12.xlsx  120.xlsx  121.xlsx  122.xlsx  123.xlsx  124.xlsx  125.xlsx  126.xlsx  127.xlsx  128.xlsx  13.xlsx  14.xlsx  15.xlsx  16.xlsx  17.xlsx  18.xlsx  19.xlsx  (+88 more)
